k8s/namespaces/llm/openwebui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
  namespace: llm
  labels:
    app.kubernetes.io/name: openwebui
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openwebui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openwebui
        app.kubernetes.io/managed-by: flux
    spec:
      containers:
        - name: openwebui
          # renovate: datasource=docker depName=ghcr.io/open-webui/open-webui
          image: ghcr.io/open-webui/open-webui:main@sha256:2e78a2f9f6f62173ae28d2203f3c9bcdadc614023380ebbe903ea9fab772535e
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/backend/data
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: openwebui-config
