k8s/namespaces/llm/openwebui/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui-https
  namespace: llm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openwebui.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: openwebui
          port: 8080
  tls:
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui-http
  namespace: llm
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`openwebui.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: openwebui
          port: 8080
